# specter-oss

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml
claude-plugin/: .mcp.json  README.md  plugin.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: apts-conformance.md  apts-requirement.md  check-article.md  format-citation.md  judge-proposal.md  list-articles.md  role-obligations.md  taxonomy.md
docs/evals/: apts-annex-iv-section-sample.md  apts-scan-coverage-sample.json  apts-self-conformance.json  apts-self-conformance.md
security/: PENTEST-REPORT.md
specter/: __init__.py  mcp_server.py
specter/agents/: __init__.py  case.py  memory.py  mike_bridge.py  personas.py
specter/api/: __init__.py  case_route.py  dev_app.py  qa_route.py
specter/apts/: __init__.py  conformance.py  evidence_map.py  models.py  requirements.py  router.py  scanner_coverage.py  scanner_mapping.py
specter/data/: article_15_controls.py  articles_existence.py  articles_requirements.py  atlas.py  crosswalk.py  ontology_mapping.py  owasp_aix.py  rationalizations.py  roles.py  severity.py  taxonomy.py
specter/judge/: models.py  reward_hack.py  three_agent.py
specter/llm/: __init__.py  claude_provider.py  mistral_provider.py  openai_provider.py
specter/ontology/: eu-ai-act.ttl
specter/qa/: _grounded_prompt.py  auth.py  byok.py  claude_retriever.py  mistral_retriever.py  models.py  openai_retriever.py
tests/: test_agents.py  test_case_route.py  test_smoke.py
webapp/: app.js  index.html  style.css
