[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "specter"
version = "0.1.6"
description = "EU AI Act compliance toolkit — ontology, taxonomy, LLM-as-Judge, grounded Q&A. Python library + Claude Code plugin."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Andrei Bacu" },
]
keywords = [
    "eu-ai-act",
    "compliance",
    "regulation",
    "llm-as-judge",
    "mistral",
    "rdf",
    "ontology",
    "agentic-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "slowapi>=0.1.9",
]
plugin = [
    "mcp>=1.27.0",
]
mistral = [
    "mistralai>=2.4.5",
]
anthropic = [
    "anthropic>=0.39",
]
openai = [
    "openai>=1.50",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1",
    "ruff>=0.15.12",
    "mcp>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/Peaky8linders/specter-oss"
Repository = "https://github.com/Peaky8linders/specter-oss"
Issues = "https://github.com/Peaky8linders/specter-oss/issues"

[tool.hatch.build.targets.wheel]
packages = ["specter"]

[tool.hatch.build.targets.sdist]
include = [
    "/specter",
    "/tests",
    "/docs",
    "/claude-plugin",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501",  # line length — managed by formatter
    "B008",  # FastAPI's Depends/Body/Query are intentionally called in defaults
    "UP042", # str+Enum is intentionally compatible with stdlib enum.Enum
]
